# binview

./: .gitignore  README.md  build.gradle  settings.gradle
backend/: Cargo.toml  build.gradle
backend/src/: main.rs
binview/: build.gradle
binview/src/main/kotlin/: App.kt  AppMain.kt  TabView.kt  Util.kt  ViewPane.kt
src/main/kotlin/: AppMain.kt  TabView.kt  Util.kt  ViewPane.kt
