[package]
name = "backend"
version = "0.1.0"
authors = ["Shuzo Kashihara <suma@users.sourceforge.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messagepack-rs = "0.7.0"
messagepack-rs-macros = "0.1.1"
chrono = "0.4"
mpack = "0.1.2"